UPDATE: Droplist with filter for Gprotein-GPCR coupling classification - Note on models for protein-gprotein table. - Frontend: table headers for signprot/couplings families table invisible columns for coupling classification - Prepare views.py for classification criteria using all data. - reset_tab hash fix - DataTables filter_container_id trick to add additional filter where needed while hidding the corresponding colums. trick thanks to C. Munk.

--- a/static/home/css/signprot-multitabtable.css
+++ b/static/home/css/signprot-multitabtable.css
@@ -1,5 +1,5 @@
 .select2-result-label {
-    font-size: 10px;
+    font-size: 12px;
 }
 
 #filters {
@@ -28,11 +28,12 @@ word-wrap:break-word;
 }
 */
 
+
 table.dataTable.compact thead th.over_header {
     border-right: 1px solid;
     border-left: 0px solid;
     text-align: center;
-    padding: 4px 4px 4px 4px;
+    /*padding: 4px 4px 4px 4px;*/
 }
 
 table.dataTable.compact thead tr.over_header th {
@@ -55,6 +56,14 @@ table.dataTable.compact thead th.checkbox_tr {
 table.dataTable.compact thead th {
     padding: 4px 16px 4px 2px;
 }
+
+/*thead.bottomborder {*/
+/*    border-right: 1px solid;*/
+/*    border-left: 0px solid;*/
+/*    text-align: center;*/
+/*    padding: 4px 4px 4px 4px;*/
+/*    border-bottom: 10px solid coral;*/
+/*}*/
 
 .yadcf-filter-wrapper {
     margin-top: 0px;
@@ -171,4 +180,17 @@ div.dataTables_wrapper {
 /*    width: 100%;*/
     margin: 0 auto;
 }
-tr { height: 40px; }
+
+#subtypestabletab tr {
+    height: 40px;
+}
+
+#bouviertabletab tr {
+    height: 40px;
+}
+
+#inouetabletab tr {
+    height: 40px;
+}
+
+
